--- a/CSS/board.css
+++ b/CSS/board.css
@@ -4,7 +4,8 @@
 :root{
     --tile-size: 100px;
     --mark-size: calc(var(--tile-size)* .9);
-    --panel-size: calc(var(--tile-size)*3)
+    --panel-size: calc(var(--tile-size)*3);
+    --playerbox-size: calc(var(--tile-size)*1.5);
 }
 body {
     margin: 0;
@@ -16,6 +17,23 @@ main {
     align-items: center;
     height: 100vh;
     width: 100vw;
+}
+#startmenu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 2;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+}
+#startbtn{
+    height: 60px;
+    width: 150px;
+}
+#gamescreen {
+    display: flex;
 }
 .board {
     display: grid;
@@ -119,4 +137,29 @@ main {
 }
 .toplayer.hide{
     visibility: hidden;
+}
+.playerboard{
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-between;
+    margin: 20px;
+    gap: 30px;
+}
+.scoreboard{
+    width: var(--playerbox-size);
+    height: var(--playerbox-size);
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0px 0px 8px 8px rgb(199, 180, 180), 
+    0px 0px 0px 10px hsl(0deg 0% 0% / 90%);
+    background-color: white;
+}
+.playerbox{
+    width: var(--playerbox-size);
+    height: calc(var(--playerbox-size)*2);
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0px 0px 8px 8px rgb(199, 180, 180), 
+    0px 0px 0px 10px hsl(0deg 0% 0% / 90%);
+    background-color: white;
 }
