--- a/CSS/board.css
+++ b/CSS/board.css
@@ -51,6 +51,7 @@ main {
 }
 #gamescreen {
     display: flex;
+    position: relative;
 }
 .board {
     display: grid;
@@ -225,6 +226,7 @@ main {
     0px 0px 0px 7px rgba(214, 8, 8, 0.9);;
     text-shadow: -2px 1px rgba(255, 145, 145, 0.9);
     cursor: pointer;
+    user-select: none;
     transition: all .1s ease-in-out;
 }
 .matchHistoryBtn:hover{
@@ -232,6 +234,28 @@ main {
     0px 0px 0px 10px rgba(245, 83, 83, 0.5);;
     transform: scale(1.05);
 }
-#reviewmenu {
+.endgamebtns{
     display: none;
+    position: absolute;
+    z-index: 4;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.reviewleft{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    width: calc(var(--playerbox-size)*1.5);
+}
+.reviewright{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    width: calc(var(--playerbox-size)*1.5);
 }
