--- a/CSS/board.css
+++ b/CSS/board.css
@@ -12,10 +12,10 @@
 body {
     margin: 0;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    user-select: none;
 }
 main {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -191,8 +191,10 @@ main {
     box-shadow: var(--borderbox-shadow-color);
     background-color: white;
 }
-#winmessage {
+.winmessage {
     display: none;
+    width: 100%;
+    height: 100%;
     position: absolute;
     justify-content: center;
     align-items: center;
@@ -226,7 +228,6 @@ main {
     0px 0px 0px 7px rgba(214, 8, 8, 0.9);;
     text-shadow: -2px 1px rgba(255, 145, 145, 0.9);
     cursor: pointer;
-    user-select: none;
     transition: all .1s ease-in-out;
 }
 .matchHistoryBtn:hover{
