--- a/CSS/board.css
+++ b/CSS/board.css
@@ -21,6 +21,13 @@ main {
     height: 100vh;
     width: 100vw;
 }
+.startbox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
 #startmenu{
     display: flex;
     justify-content: center;
@@ -30,6 +37,33 @@ main {
     width: 100%;
     height: 100%;
     background-color: black;
+}
+#start-title{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    color: white;
+    text-shadow: -4px 4px rgba(230, 31, 31, 0.9);
+}
+#start-title::before{
+    content: '';
+    position: absolute;
+    background-color: rgb(196, 181, 179);
+    width: calc(var(--playerbox-size)*3.1);
+    height:  calc(var(--tile-size)*1.2);
+    border-radius: 50px;
+    z-index: -1;
+}
+#start-title::after{
+    content: '';
+    position: absolute;
+    background-color: rgb(110, 28, 17);
+    width: calc(var(--playerbox-size)*3);
+    height:  calc(var(--tile-size)*1.1);
+    border-radius: 50px;
+    z-index: -1;
 }
 #startbtn{
     height: 60px;
@@ -190,6 +224,16 @@ main {
     border-radius: 5px;
     box-shadow: var(--borderbox-shadow-color);
     background-color: white;
+}
+#narberal{
+    background-image: url(../gifs/narberal.gif);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+#lupusregina{
+    background-image: url(../gifs/lupusregina.gif);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .winmessage {
     display: none;
